refactor: update script imports
Included World manager

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./components/Constants.js" defer></script>
     <script src="./components/Vector.js" defer></script>
     <script src="./components/Ball.js" defer></script>
+    <script src="./components/World.js" defer></script>
     <script src="./main.js" defer></script>
     <style>
         html,
